<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.raywenderlich.android.octomembers.ui.member.MemberActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_avatar_container_size"
        android:background="@color/colorPrimaryDark"
        android:orientation="horizontal"
        android:gravity="center_vertical">


        <ImageView
            android:id="@+id/memberAvatar"
            android:layout_width="144dp"
            android:layout_height="144dp"
            android:padding="@dimen/padding_standard"
            android:contentDescription="@string/contentDescription_teamMEmberAvatar"
            tools:src="@drawable/ic_launcher_background" />


        <TextView
            android:id="@+id/memberName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_standard"
            android:maxLines="3"
            android:text="@string/label_name"
            android:textSize="@dimen/detail_avatar_size_name"
            android:textColor="@color/white"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/member_label"
                android:text="@string/label_type" />

            <TextView
                android:id="@+id/memberType"
                style="@style/member_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/member_label"
                android:text="@string/label_email" />

            <TextView
                android:id="@+id/memberEmail"
                style="@style/member_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/member_label"
                android:text="@string/label_company" />

            <TextView
                android:id="@+id/memberCompany"
                style="@style/member_info" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                style="@style/member_label"
                android:text="@string/label_login" />

            <TextView
                android:id="@+id/memberLogin"
                style="@style/member_info" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
